@@ -76,6 +76,8 @@ Optimizations
 
 * GITHUB#11857, GITHUB#11859, GITHUB#11893, GITHUB#11909: Hunspell: improved suggestion performance (Peter Gromov)
 
+* GITHUB#12328: Optimize ConjunctionDISI.createConjunction (Armin Braun)
+
 Bug Fixes
 ---------------------
 
